@@ -5,4 +5,5 @@
 .. include:: data/table_complex.txt
 .. include:: data/list_table.txt
 .. include:: data/custom_roles.txt
+.. include:: data/svg_images.txt
 .. include:: data/errors.txt
